rust/crates/turbotokens-core/src/snapshots/turbotokens_core__summary__tests__snapshots_filter_and_sort_summaries_since_until_inclusive.snap
---
source: crates/turbotokens/src/summary.rs
expression: rows
---
[
  {
    "date": "2026-01-10",
    "inputTokens": 10,
    "outputTokens": 10,
    "cacheCreationTokens": 1,
    "cacheReadTokens": 2,
    "totalCost": 0.5,
    "credits": 0.5,
    "messageCount": 1,
    "modelsUsed": [
      "end-boundary"
    ],
    "modelBreakdowns": [
      {
        "modelName": "end-boundary",
        "inputTokens": 10,
        "outputTokens": 10,
        "cacheCreationTokens": 1,
        "cacheReadTokens": 2,
        "cost": 0.5
      }
    ]
  },
  {
    "date": "2026-01-02",
    "inputTokens": 2,
    "outputTokens": 10,
    "cacheCreationTokens": 1,
    "cacheReadTokens": 2,
    "totalCost": 0.25,
    "credits": 0.5,
    "messageCount": 1,
    "modelsUsed": [
      "start-boundary"
    ],
    "modelBreakdowns": [
      {
        "modelName": "start-boundary",
        "inputTokens": 2,
        "outputTokens": 10,
        "cacheCreationTokens": 1,
        "cacheReadTokens": 2,
        "cost": 0.25
      }
    ]
  }
]
